tests/NormalTests/paczka1/fuzzy1/80702294.err
Error in line 2: 9yVSb93I A163 7,2
Error in line 16: S246 S246 60,8
Error in line 11: 9yVSb93I S420 63,5
Error in line 19: yFZ A163 69,3
Error in line 15: XcEb A163 88,8
Error in line 32: 9yVSb93I A163 198,7
Error in line 34: XcEb A109 73,7
